# JobPilot-AI

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/browser/: anti_detect.py  browser_manager.py
src/core/: config.py  database.py  logger.py  models.py
src/dashboard/: cli_dashboard.py
src/engine/: __init__.py  applier.py  dedup.py  filter.py
src/scheduler/: scheduler.py
tests/: run_connectivity_check.py  test_config.py  test_connectivity.py  test_dedup.py  test_filter.py
